update constants